add content for yunwei note.

--- a/_posts/Study/部署问题及经验总结.md
+++ b/_posts/Study/部署问题及经验总结.md
@@ -1,9 +1,12 @@
+---
 
 layout: post
-title: 我的人生
-category: 运维
+title: 运维工作笔记
+category: 技术
 tags: 运维
 keywords: 运维
+
+---
 
 # Table of Contents
 
